Rearrange things a lot

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -81,9 +81,12 @@
     \acro{AR}{acceptance rate}
     \acro{CNN}{convolutional neural network}
     \acro{DP}{demographic parity}
-    \acro{EOdds}{equalized odds}
+    \acro{EOdds}{equalised odds}
     \acro{EOpp}{equality of opportunity}
+    \acro{INN}{invertible neural network}
+    \acro{LR}{logistic regression}
     \acro{ML}{machine learning}
+    \acro{MMD}{maximum mean discrepancy}
     \acro{SVM}{support vector machine}
     \acro{TNR}{true negative rate}
     \acro{TPR}{true positive rate}
@@ -99,9 +102,10 @@
   \begin{nomenclature}
     \entry{$\vx$}{Input features (without sensitive attributes)}
     \entry{$s$}{Sensitive attribute}
-    \entry{$y$}{Class label (groundtruth)}
+    \entry{$y$}{Class label (ground truth)}
     \entry{$\hat{y}$}{Predicted label}
     \entry{$\bar{y}$}{Fair target label}
+    \entry{$\vz$}{Encoding of $\vx$}
   \end{nomenclature}
 
   \vspace{8ex}
