--- a/allreferences.bib
+++ b/allreferences.bib
@@ -1184,11 +1184,9 @@
 @Article{	  kehrenberg2020zeroshot,
   author	= {Kehrenberg, Thomas and Sharmanska, Viktoriia and Bartlett,
 		  Myles and Quad\-ri\-an\-to, Novi},
-  title		= {Zero-shot Fairness with Invisible Demographics},
-  booktitle	= {Submitted to International Conference on Learning
-		  Representations},
+  title		= {Learning with Perfect Bags: Addressing Hidden Stratification with Zero Labeled Data},
+  booktitle	= {Submitted to International Conference on Machine Learning},
   year		= {2021},
-  url		= {https://openreview.net/forum?id=7IElVSrNm54},
   note		= {under review}
 }
 
