--- a/math_commands.tex
+++ b/math_commands.tex
@@ -39,8 +39,9 @@
 \def\plaineqref#1{\ref{#1}}
 % Reference to a chapter, lower-case.
 \def\chapref#1{chapter~\ref{#1}}
-% Reference to an equation, upper case.
+% Reference to a Chapter, upper case.
 \def\Chapref#1{Chapter~\ref{#1}}
+\def\twochaprefs#1#2{chapters \ref{#1} and \ref{#2}}
 % Reference to a range of chapters
 \def\rangechapref#1#2{chapters \ref{#1}--\ref{#2}}
 % Reference to a range of chapters, upper case
